--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "leadthm",
   "version": "1.0.0",
   "scripts": {
+    "start": "concurrently \"npm run css\" \"npm run js\"",
     "js": "rollup -c --watch",
     "js:build": "rollup -c",
     "css": "npx @tailwindcss/cli -i ./src/main.css -o ./assets/css/style.css --watch",
     "css:build": "npx @tailwindcss/cli -i ./src/main.css -o ./assets/css/style.css --minify",
-    "build": "npm run css:build && npm run js:build",
+    "build": "concurrently \"npm run css:build\" \"npm run js:build\"",
     "test": "playwright test",
     "test:ui": "playwright test --ui"
   },
@@ -23,13 +24,14 @@
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.3",
     "@playwright/test": "^1.50.1",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@rollup/plugin-node-resolve": "^16.0.0",
     "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-terser": "^0.4.4",
+    "@tailwindcss/cli": "^4.0.3",
     "@types/node": "^22.13.1",
+    "concurrently": "^9.1.2",
     "rollup": "^4.34.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-delete": "^2.1.0"
